=============================
CHANGELOG JiNN for eGroupWare
=============================
$Id$

Version 0.8.207
Thu Jan 13 00:06:02 CET 2005
=============================
1 improved layout of edit object a little
2 introduced JiNN's own css file in default
3 started with implementation of 'default field diplay in listview'

Version 0.8.206
Thu Jan  6 17:15:14 CET 2005
=============================
- Better button layout for add/edit screens
- (Re)implement "add new record button" after editing or add the last one
- Add dbfieldtype float
- Add extra where sql field to objects table
- Implement extra object filter on record_list
- ORDER objects in edit_site default by name

Version 0.8.205c
Thu Dec 30 22:24:12 CET 2004
=============================
- Add concept of proof of advanced filters
- Cleanup more stuff

Version 0.8.205b
Thu Dec 30 18:27:21 CET 2004
=============================
- All browse setting are now stored in the session array and thay stay sticky
- Renamed search to quick filter
- Quick filter can now search on more tokens using OR
- Quick filter is stores in session array
- Small fixes to the pager
- Fix record count when using a quick filter
- Small code cleanup

Version 0.8.205a
Fri Dec 24 17:01:31 CET 2004
=============================
- Completely rewritten pager for listview
- Added general preference for records per page
- code cleanups

Version 0.8.205
Wed Dec 22 16:42:47 CET 2004
=============================
- new file for list records
- moved main_menu to uicommon
- fixed wrong saving of list configurations
- added a link to this changelog in About JiNN

Version 0.8.204a
Mon Oct 25 18:59:25 CEST 2004
=============================
- improved sidebox menu order

Wed Oct 20 15:58:11 CEST 2004
Version 0.8.204
=============================
- fix when user is not a member of a group
- fix wrong use of count()

Fri Oct 15 14:31:40 CEST 2004
Version 0.8.203
=============================
- security fix to avoid abritairy download of files

