@@ -3,6 +3,8 @@ CHANGELOG JiNN for eGroupWare
 =============================
 $Id$
 
+1 fixed ticket 61: many2many relationships failed on new record creation
+
 Version 0.8.207
 Thu Jan 13 00:06:02 CET 2005
 =============================
